# turbo-life

./: .gitignore  Cargo.toml  NOTICE  README.md
.cargo/: config.toml
.kiro/specs/neighbor-prebinding/: design.md  requirements.md  tasks.md
docs/: coordmap-design.md  perf-report.md
scripts/: bench_main.sh  build_maxperf.sh  build_pgo.sh  max_throughput.sh  perf_linux.sh  perf_loops.ps1  rustc_wrapper.sh  tune_runtime.sh
src/: lib.rs  main.rs
src/quicklife/: arena.rs  engine.rs  mod.rs  rules.rs
src/turbolife/: activity.rs  arena.rs  coord_set.rs  engine.rs  kernel.rs  mod.rs  sync.rs  tile.rs  tile_cache.rs  tilemap.rs
tests/: parity.rs  quicklife.rs  turbolife.rs
