[package]
name = "turbo-life"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A high-performance Conway's Game of Life (B3/S23) engine in Rust."

[dependencies]
rand = "0.9.2"
rayon = "1.10"
rustc-hash = "2"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
