[package]
name = "turbo-life"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A high-performance Conway's Game of Life (B3/S23) engine in Rust."

[features]
default = []
# AArch64-only: enables extra PRFM prefetch hints in the fused kernel loops.
# Useful for machine-specific auto-tuning; disabled by default because it can
# regress on some CPUs/workloads.
aggressive-prefetch-aarch64 = []
# AArch64-only: lowers the churn gate for NEON assume-changed mode.
# This can improve high-churn workloads on some systems, but is not universally
# faster, so it is opt-in for auto-tuning.
aggressive-neon-assume-changed = []

[dependencies]
rand = "0.9.2"
rayon = "1.10"
num_cpus = "1.16"

# ── Dev profile: faster incremental builds ──────────────────────────────
[profile.dev]
opt-level = 0
debug = "line-tables-only"   # minimal debug info — faster builds, still get backtraces
incremental = true

# Optimize dependencies even in dev so the engine isn't painfully slow
[profile.dev.package."*"]
opt-level = 2

# ── Release profile: maximum runtime performance ────────────────────────
[profile.release]
opt-level = 3
lto = "off"                  # benchmarked on main.rs harness: lower wall-clock median on Apple M4
codegen-units = 1            # single CGU for best optimization
panic = "abort"              # smaller binary, no unwind overhead
strip = "symbols"            # strip symbols for smaller binary
debug = false
overflow-checks = false

# ── Custom bench profile: release-grade with debug info for profiling ───
[profile.bench-profile]
inherits = "release"
debug = 2                    # full debug info for perf/profilers
strip = "none"
